--- a/app/src/main/res/layout/fragment_creativity.xml
+++ b/app/src/main/res/layout/fragment_creativity.xml
@@ -22,7 +22,7 @@
             app:layout_collapseMode="pin"
             app:navigationIcon="@drawable/ic_back"
             app:theme="@style/ThemeOverlay.AppCompat"
-            app:title="@string/lifestyle" />
+            app:title="@string/literary_creativity" />
 
     </com.google.android.material.appbar.AppBarLayout>
 
@@ -40,7 +40,7 @@
             android:id="@+id/tv_creativity_info"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="18sp"
+            android:textSize="18dp"
             />
 
     </ScrollView>
