--- a/app/src/main/res/layout/fragment_lifestyle.xml
+++ b/app/src/main/res/layout/fragment_lifestyle.xml
@@ -31,12 +31,12 @@
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/poetInfo"
         android:layout_width="0dp"
-        android:layout_height="170dp"
+        android:layout_height="190dp"
         app:layout_constraintTop_toBottomOf="@id/topAppBar"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:text="@string/poet_info"
-        android:textSize="20sp"
+        android:textSize="20dp"
         android:layout_marginStart="@dimen/margin_middle"
         android:layout_marginEnd="@dimen/margin_middle"
         android:layout_marginTop="@dimen/margin_middle"
