--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -60,6 +60,6 @@
     <dimen name="elevation_6">6dp</dimen>
     <dimen name="margin_16">16dp</dimen>
     <dimen name="text_size_16">16sp</dimen>
-    <dimen name="text_size_20">20sp</dimen>
+    <dimen name="text_size_20">20dp</dimen>
 
 </resources>
